# precice-performance-study-helpers

./: .gitattributes  README.md  pyproject.toml  setup.py
.github/workflows/: check-pep8.yml  pythonpublish.yml
examples/: doConvergenceStudy.py  precice-config-template.xml
src/prepesthel/: io.py  participant.py  runner.py
